# ai-coding

./: .gitignore  README.md  cleanup.js  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/ai/: pyproject.toml  requirements.txt
apps/ai/src/: main.py
apps/ai/src/api/: dependencies.py
apps/ai/src/api/routes/: ai.py  embeddings.py
apps/ai/src/core/: config.py  logging.py
apps/ai/src/models/: schemas.py
apps/ai/src/services/agents/: bug_fix_agent.py  complexity_agent.py  hint_agent.py
apps/ai/src/services/llm/: client.py  prompts.py
apps/ai/src/services/rag/: embedder.py  retriever.py
apps/ai/src/workers/: tasks.py
apps/api/: package.json  tsconfig.json
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
data/: fetch_err.txt  fetch_log.txt
data/problems/: 01-matrix.json  1-bit-and-2-bit-characters.json  132-pattern.json  2-keys-keyboard.json  24-game.json  3sum-closest.json  3sum-smaller.json  3sum-with-multiplicity.json  3sum.json  4-keys-keyboard.json  4sum-ii.json  4sum.json  a-number-after-a-double-reversal.json  abbreviating-the-product-of-a-range.json  absolute-difference-between-maximum-and-minimum-k-elements.json  account-balance-after-rounded-purchase.json  accounts-merge.json  add-and-search-word-data-structure-design.json  add-binary.json  add-bold-tag-in-string.json  add-digits.json  add-strings.json  (+3619 more)
scripts/: fetch_leetcode_metadata.py  fill_complexity.py  generate_editorials.py  index_problems.py  ingest_leetcode_solutions.py  repair_corrupted.py  seed-problems.ts  setup.sh
(+64 files in other folders)
