[project]
name = "ai-service"
version = "0.1.0"
description = "AI service for the coding platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "litellm>=1.55.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "voyageai>=0.3.0",
    "qdrant-client>=1.12.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "tree-sitter>=0.23.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
